Added new easter eggs

--- a/index.html
+++ b/index.html
@@ -1,16 +1,51 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="fr" class="">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Le Décompte Avant la Liberté (ou pas)</title>
+    <title>Décompte avant l'Aventure !</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <script>
+        // Applique le thème (clair ou sombre) dès le chargement pour éviter le "flicker" (saccade visuelle)
+        if (localStorage.getItem('color-theme') === 'dark' || (!('color-theme' in localStorage) && window.matchMedia('(prefers-color-scheme: dark)').matches)) {
+            document.documentElement.classList.add('dark');
+        } else {
+            document.documentElement.classList.remove('dark');
+        }
+    </script>
+    <style>
+        /* Style pour les confettis emojis */
+        .emoji-confetti {
+            position: absolute;
+            bottom: 0;
+            font-size: 1.5rem;
+            animation: fall 3s linear forwards;
+            user-select: none; /* Empêche la sélection de l'emoji */
+        }
+
+        @keyframes fall {
+            to {
+                transform: translateY(200px);
+                opacity: 0;
+            }
+        }
+    </style>
 </head>
-<body class="bg-gray-900 text-white flex flex-col items-center p-8">
-    <h1 class="text-4xl font-bold mb-8">Départ imminent !</h1>
-    <div id="countdown-container" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
-        <!-- Les décomptes seront insérés ici par le JavaScript -->
-    </div>
+<body class="bg-slate-100 dark:bg-gray-900 text-gray-800 dark:text-white transition-colors duration-300">
+
+    <header class="w-full p-4 flex justify-end">
+        <button id="theme-toggle" class="p-2 rounded-lg bg-gray-200 dark:bg-gray-700">
+            <svg id="theme-toggle-dark-icon" class="w-5 h-5 hidden" fill="currentColor" viewBox="0 0 20 20"><path d="M17.293 13.293A8 8 0 016.707 2.707a8.001 8.001 0 1010.586 10.586z"></path></svg>
+            <svg id="theme-toggle-light-icon" class="w-5 h-5 hidden" fill="currentColor" viewBox="0 0 20 20"><path d="M10 2a1 1 0 011 1v1a1 1 0 11-2 0V3a1 1 0 011-1zm4 8a4 4 0 11-8 0 4 4 0 018 0zm-.464 4.95l.707.707a1 1 0 001.414-1.414l-.707-.707a1 1 0 00-1.414 1.414zm2.12-10.607a1 1 0 010 1.414l-.707.707a1 1 0 11-1.414-1.414l.707-.707a1 1 0 011.414 0zM17 11a1 1 0 100-2h-1a1 1 0 100 2h1zm-7 4a1 1 0 011 1v1a1 1 0 11-2 0v-1a1 1 0 011-1zM5.05 6.464A1 1 0 106.465 5.05l-.708-.707a1 1 0 00-1.414 1.414l.707.707zM5 11a1 1 0 100-2H4a1 1 0 100 2h1zM8 16a1 1 0 011 1v1a1 1 0 11-2 0v-1a1 1 0 011-1z"></path></svg>
+        </button>
+    </header>
+
+    <main class="flex flex-col items-center p-8">
+        <h1 class="text-4xl font-bold mb-8 text-center">Le Grand Départ : Compte à Rebours !</h1>
+        <div id="countdown-container" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8 w-full max-w-6xl">
+            <!-- Les décomptes seront insérés ici par le JavaScript -->
+        </div>
+    </main>
 
     <script src="script.js"></script>
 </body>
